--- a/src/ImageImport/SelectSourceForm.resx
+++ b/src/ImageImport/SelectSourceForm.resx
@@ -95,8 +95,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAxgoAAAJNU0Z0AUkBTAIBAQIB
-        AAEwAQABMAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAYADAAEgAwABAQEAAQgG
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA2goAAAJNU0Z0AUkBTAIBAQIB
+        AAE4AQABOAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAYADAAEgAwABAQEAAQgG
         AAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
@@ -124,24 +124,25 @@
         AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
         /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
         AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
-        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AAUAAf8BvBbvAQcB8wcAAf8B8gEHEu8BBwG8Af9G
-        AAH/ARUZAAEHBQAB/wHrFgABFQH/RAAB9AERGgABDwHzBAAB9xgAARUB/0MAAbwCAAHsAf8VAAG8AgAB
-        6gQAAREBAAEUAf8SAAH/AesCAAG8QwABBwIAAf8WAAH/AgABDgYAAe8UAAH/AgABB0MAAe8jAAHvFwAB
-        70MAAe8jAAHvFwAB70MAAe8jAAHvFwAB70MAAe8jAAHvCQAB8AHvAfQLAAHvQwAB7yMAAe8IAAHxAgAB
-        7AsAAe9DAAHvIQAB6gEOAfEHAAG8BAAB7AH/BwAB6gEOAfFDAAHvKgAB8AYAAexNAAHvKQABvAgAAewB
-        /0sAAe8oAAHxAwAB8AIAAewDAAHsSwAB7ycAAbwDAAEHAwAB7wH0ARMCAAHsAf9JAAHvJgAB8QMAAfAE
-        AAHvAQAB9AMAAe1JAAHvJgABEQIAAbwFAAHvAgAB9AETAQABDkkAAe8mAAHxAREB8QYAAe8DAAH0AREB
-        kkkAAe8vAAHvTwAB7xkAAf8CAAEOEgAB708AAe8LAAH/AQcM7wHsAgABkhIAAe9PAAHvCwAB7w8AAUMB
-        /xIAAe9PAAHvCgAB8wEPDQABDwHrAfMTAAHvTwABBwIAAf8GAAH/AQ4CAAHwIQAB708AAfECAAEUBu8B
-        7AIAAewB/yEAAe9PAAH/AesKAAEVAf8iAAHvUAAB/wHvAREHAAEOAfAhAAHqAQ4B8f8AzwABQgFNAT4H
-        AAE+AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEACP8IAAj/CAAB4AIAAQcB8AIAAQ8IAAHAAgAB
-        AwHgAgABBwgAAYACAAEBAeACAAEDCAABgwL/AuEC/wGDCAABhwL/AeEB4wL/AcMIAAGPAv8B8QHjAv8B
-        4wgAAY8C/wHxAeMC/wHjCAABjwL/AfEB4wL/AeMIAAGPAv8B8QHjAf4BPwHjCAABjwL/AfEB4wH8AT8B
-        4wgAAY8C/wHxAeMB+AEPAeMIAAGPAv8B8QH/AfABDwH/CAABjwL/AfEB/wHgAQMB/wgAAY8C/wHxAf8B
-        wAEDAf8IAAGPAv8B8QH/AYIBAAH/CAABjwL/AfEB/wEGASAB/wgAAY8C/wHxAf8BDgEwAf8IAAGPAv8B
-        8QH/AR4BOAH/CAABjwL/AfEB/wH+AT8B/wgAAY8C/wHhAf8B/gE/Af8IAAGPAfgBAAEBAf8B/gE/Af8I
-        AAGPAfgBAAEBAf8B/gE/Af8IAAGPAfABAAEDAf8B/gE/Af8IAAGHAeAD/wH+AT8B/wgAAYABAAP/Af4B
-        PwH/CAABgAEBA/8B/gE/Af8IAAHAAQMD/wH+AT8B/wgACP8IAAj/CAAI/wgACw==
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/+kAAHzAeoBDhUAARUBvAH/RQAB/wG8Fu8BBwHzBAAB
+        /wEHAQ4ZAAHtAf9DAAH/ARUZAAEHAwAB8xwAAbxCAAH0AREaAAEPAfMCAAEHAgABvAH/FQAB8wIAARVC
+        AAG8AgAB7AH/FQABvAIAAeoCAAHvXwABBwIAAf8WAAH/AgABDgIAAe8FAAHxAQcB/1cAAe8fAAHvBQAB
+        DgEAAQdXAAHvHwAB7wUAAeoBDgHxVwAB7x8AAe9fAAHvHwAB7wIAAf8WAAH/AgABDkIAAe8fAAG8AgAB
+        +AH/FQABvAIAAepCAAHvHwAB9AERGgABDgHzQgAB7yAAAf8BERkAAQdDAAHvIQAB9AG8Fu8BBwHzAf9D
+        AAHvfwAB738AAe8hAAHzAeoBDhUAARUBvAH/QwAB7x8AAf8BBwEOGQAB7QH/QgAB7x8AAfMcAAG8QgAB
+        7x8AAQcCAAG8Af8VAAHzAgABFUIAAe8ZAAH/AgABDgIAAe9fAAHvCwAB/wEHDO8B7AIAAZICAAHvBQAB
+        8QEHAf9XAAHvCwAB7w8AAUMB/wIAAe8FAAEOAQABB1cAAe8KAAHzAQ8NAAEPAesB8wMAAe8FAAHqAQ4B
+        8VcAAQcCAAH/BgAB/wEOAgAB8BEAAe9fAAHxAgABFAbvAewCAAHsAf8RAAHvAgAB/xYAAf8CAAEOQgAB
+        /wHrCgABFQH/EgABvAIAAfgB/xUAAbwCAAHqQwAB/wHvAREHAAEOAfATAAH0AREaAAEOAfNjAAH/AREZ
+        AAEHZQAB9AG8Fu8BBwHzAf/CAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYAAQIWAAP/AQAI
+        /wgABP8B4AIAAQMIAAHgAgABBwGAAgABAQgAAcACAAEDAYACAAEBCAABgAIAAQEBgwL/AeEIAAGDAv8B
+        4QGPAv8B8QgAAYcC/wHhAY4BPwH/AfEIAAGPAv8B8QGOAT8B/wHxCAABjwL/AfEBjgE/Af8B8QgAAY8C
+        /wHxAY8C/wHxCAABjwL/AfEBhwL/AeEIAAGPAv8B8QGDAv8B4QgAAY8C/wHxAYACAAEBCAABjwL/AfEB
+        wAIAAQMIAAGPAv8B8QHgAgABAwgAAY8C/wHxBP8IAAGPAv8B8QT/CAABjwL/AfEB4AIAAQMIAAGPAv8B
+        8QGAAgABAQgAAY8C/wHxAYACAAEBCAABjwL/AfEBgwL/AeEIAAGPAv8B4QGPAv8B8QgAAY8B+AEAAQEB
+        jgE/Af8B8QgAAY8B+AEAAQEBjgE/Af8B8QgAAY8B8AEAAQMBjgE/Af8B8QgAAYcB4AL/AY8C/wHxCAAB
+        gAEAAv8BhwL/AeEIAAGAAQEC/wGDAv8B4QgAAcABAwL/AYACAAEBCAAE/wHAAgABAwgABP8B4AIAAQMI
+        AAj/CAAL
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
